[gd_scene load_steps=11 format=2]

[ext_resource path="res://Images/Portal_n.png" type="Texture" id=1]
[ext_resource path="res://Images/Portal.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Enemies/LaserGenerator/Laser.gd" type="Script" id=3]
[ext_resource path="res://Images/LightDifuse.png" type="Texture" id=4]
[ext_resource path="res://Images/SpinnerCore_n.png" type="Texture" id=5]
[ext_resource path="res://Images/SpinnerCore.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Autoloads/Materials/LaserGeneratorParticles.tres" type="Material" id=7]
[ext_resource path="res://Images/LaserTexture.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]

[node name="Laser" type="StaticBody2D"]
collision_layer = 16
collision_mask = 3
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
self_modulate = Color( 0, 0, 0, 1 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="CollisionShape2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionShape2D/Area2D"]
modulate = Color( 1, 1, 0, 1 )
shape = SubResource( 2 )

[node name="Line2D" type="Line2D" parent="."]
modulate = Color( 1.3, 1.15, 1.15, 1 )
points = PoolVector2Array( 0, 0, 100, 0 )
width = 40.0
default_color = Color( 0.901961, 0.2, 0.2, 1 )
texture = ExtResource( 8 )
texture_mode = 2

[node name="LightSprite" type="Sprite" parent="."]
modulate = Color( 0.901961, 0.2, 0.2, 1 )
scale = Vector2( 0.157495, 0.157495 )
texture = ExtResource( 2 )
normal_map = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.101961, 0.101961, 0.109804, 1 )
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )
normal_map = ExtResource( 5 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 4 )
texture_scale = 0.5
color = Color( 0.901961, 0.2, 0.2, 1 )

[node name="Tween" type="Tween" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 3840, 0 )
collision_mask = 16

[node name="Particles2D" type="Particles2D" parent="."]
modulate = Color( 1.3, 1.15, 1.15, 1 )
amount = 10
explosiveness = 0.1
process_material = ExtResource( 7 )

[node name="EndLight" type="Light2D" parent="Particles2D"]
position = Vector2( -135.2, -135.1 )
texture = ExtResource( 4 )
offset = Vector2( 135.2, 135.1 )
texture_scale = 0.25
color = Color( 0.901961, 0.2, 0.2, 1 )

[connection signal="body_entered" from="CollisionShape2D/Area2D" to="." method="_on_Area2D_body_entered"]
